<resources>
    <string name="app_name">Task9_Designing</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home"> Home</string>
    <string name="cash_points"> Cash Points</string>
    <string name="promotion"> Promotions</string>
    <string name="my_account"> My Account</string>


    <string name="granted"> Granted</string>
    <string name="requires_camera_access">Camera permission needed</string>
    <string name="denied">Denied</string>
    <string name="go_to_settings">Go to settings</string>
    <string name="cancel">Cancel</string>
    <string name="camera_permission_needed">This app need camera permission to scan QR codes</string>
    <string name="draw_like_a_pro">Draw like a pro!</string>
    <string name="read_more">Read more</string>
    <string name="lucky_draw">Lucky draw</string>
    <string name="lucky_draw_here">Lucky draw here again!!</string>
    <string name="on11">On 11th december</string>
    <string name="win_amazing_prizes">Win amazing prizes</string>
    <string name="daraz11_sale">Daraz 11.11 sale!</string>
    <string name="earn_massive_discounts">Earn massive discounts</string>
    <string name="chance_to_win_a_car">Chance to win a car</string>
    <string name="win_honda_civic">Win honda civic</string>
    <string name="sport_car_in_pak">Sports cars here in PK!!</string>
    <string name="our_very_1st_sports_cars">Our very first sport car</string>
    <string name="account_settings">Account Settings</string>
    <string name="account_info_settings_more"><![CDATA[Account info, Settings & More]]></string>
    <string name="account">ACCOUNT</string>
    <string name="account_info">Account Information</string>
    <string name="change_easypasia_account_pin">Change easypaisa Account Pin</string>
    <string name="link_telenor_microfinance_bank">Link Telenor Microfinance Bank</string>
    <string name="link_debit_card">Link Debit Card</string>
    <string name="get_your_tax_certificate">Get Your Tax Certificate</string>
    <string name="open_newgen_account">Open NewGen Account</string>
    <string name="become_an_easypaisa_merchant">Become An easypaisa Merchant</string>
    <string name="general">GENERAL</string>
    <string name="notifications">Notifications</string>
    <string name="finger_print_face_login">Finger Print/Face Login</string>
    <string name="location_permission_needed">This app needs location access</string>
    <string name="requires_location_access">Location permission needed</string>
    <string name="current_location">Current Location</string>
    <string name="requires_current_location">This app requires current location access</string>
    <string name="my_rewards">My Rewards</string>
    <string name="available_balance">Available Balance</string>
    <string name="rs">Rs.0.00</string>
    <string name="updated_just_now">Updated Just Now</string>
    <string name="upgrade_account">Upgrade Account</string>
    <string name="add_cash">Add Cash</string>
    <string name="send_money">Send Money</string>
    <string name="bill_payment">Bill Payment</string>
    <string name="mobile_packages">Mobile Packages</string>
    <string name="more_with_easypaisa">More with easypaisa</string>
    <string name="easy_load">Easyload</string>
    <string name="easy_cash_loan">Easycash Loan</string>
    <string name="savings_pocket">Savings Pocket</string>
    <string name="invite_earn">Invite &amp; earn</string>
    <string name="rasst_payment">Raast Payment</string>
    <string name="mini_app">Mini App</string>
    <string name="savings">Savings</string>
    <string name="buy_now_pay_later">Buy Now Pay Later</string>
    <string name="insurance">Insurance</string>
    <string name="donation">Donations</string>
    <string name="rs_1_game">Rs. 1 Game</string>
    <string name="see_all">See All</string>
    <string name="discounts">Discounts</string>
    <string name="top_ups">Topups</string>
    <string name="education">Education</string>
    <string name="m_tag">M-Tag</string>
    <string name="nadra_fee">NADRA Fee</string>
    <string name="online_payment">Online Payment</string>
    <string name="enter_and_win">Enter and Win</string>
    <string name="tohfa">Tohfa</string>
    <string name="get_your_easypaisa_debit_card">Get your easypaisa Debit Card</string>
    <string name="online_card">Online Card</string>
    <string name="only_for_online_payments_in_pakistan">Only for Online Payments in Pakistan</string>
    <string name="manage_cards">Manage Cards</string>
    <string name="plastic_card">Plastic Card</string>
    <string name="discover_mini_apps_on_easypaisa">Discover MiniApps on easypaisa</string>
    <string name="burger_lab">Burger Lab</string>
    <string name="more">More</string>
    <string name="easy_tickets">EasyTickets</string>
    <string name="gaming_vouchers">Gaming Vouchers</string>
    <string name="starzplay">STARZPLAY</string>
    <string name="ginyaki">Ginyaki</string>
    <string name="book_me">BookMe</string>
    <string name="jamil_sweets">Jamil Sweets</string>
    <string name="al_meezan">Al Meezan</string>
    <string name="efu_life_insurance">EFU Life Insurance</string>
    <string name="new_yorker_pizza">New Yorker Pizza</string>
    <string name="cricwick">Cricwick</string>
    <string name="buy_gold">Buy Gold</string>
    <string name="faysal_funds">Faysal Funds</string>
    <string name="bajao">Bajao</string>
    <string name="sweet_cream">Sweet Cream</string>
    <string name="lahore_broast">Lahore Borast</string>
    <string name="what_a_paratha">What A Paratha</string>
    <string name="whites_castle">Whites Castle</string>
    <string name="dough_with_the_flow">Dough with the Flow</string>
    <string name="consult_doctor">Consult Doctor</string>
    <string name="delish_pizza_bar">Delish Pizza Bar</string>
    <string name="game_box">Gamebox</string>
    <string name="hotnspicy">HotnSpicy</string>
    <string name="help_and_customer_support"><![CDATA[Help & Customer Support]]></string>
    <string name="register_and_complaint">Register a complaint or get quick help on querues related to easypaisa</string>
    <string name="get_help">Get Help</string>
    <string name="easy_paisa">easypaisa</string>
    <string name="profile_setting_more"><![CDATA[Profile, Settings & More]]></string>
    <string name="account_level">Account Level</string>
    <string name="transaction_history">Transcation History</string>
    <string name="my_wallet">My Wallet</string>
    <string name="goals_and_rewards"><![CDATA[Goals & Rewards]]></string>
    <string name="my_approvals">My Approvals</string>
    <string name="my_favourites">My Favourites</string>
    <string name="tax_certificate">Tax Certificate</string>
    <string name="subscribe_services">Subscribed Services</string>
    <string name="customer_support">Customer Support</string>
    <string name="fee_details">Fee Details</string>
    <string name="help_and_faqs"><![CDATA[Help & FAQs]]></string>
    <string name="help">HELP</string>
    <string name="username">Username</string>
    <string name="phone_no">Phone Number</string>
    <string name="register_email">Register Email</string>
    <string name="edit">Edit</string>



    <string name="apiKey">AIzaSyANaq8EsmFnFadqjS7x_lrzk261u76w8IU</string>
    <string name="cash_deposit">Cash Deposit</string>
    <string name="your_first_cash_deposit">Your first cash deposit needs to be made through a biometric (BVS) Cash Point</string>
    <string name="bvs_cash_points">BVS Cash Points</string>
    <string name="one">1.0</string>
    <string name="location">Location</string>
    <string name="expended_radius">Expand Radius</string>
    <string name="km_islamabad">KM  Islamabad</string>
    <string name="how_to_deposit_cash">How to deposit Cash</string>
    <string name="version">Version V.2.9.49</string>
    <string name="eng">Eng</string>
    <string name="urdu">اردو</string>

</resources>