<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- Custom Bottom Navigation Bar -->
    <LinearLayout
        android:id="@+id/bottomNavigationBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_8dp"
        android:background="@color/white"
        android:elevation="@dimen/_8dp"
        android:orientation="horizontal"
        android:paddingTop="@dimen/_8dp"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:id="@+id/homeLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:clickable="true"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/homeIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_home_outlined" />

            <TextView
                android:id="@+id/homeText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_2dp"
                android:text="@string/home"
                android:textColor="@color/grey"
                android:textSize="@dimen/_11sp" />
        </LinearLayout>


        <LinearLayout
            android:id="@+id/locationLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:clickable="true"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/locationIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_location_outlined" />

            <TextView
                android:id="@+id/locationText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_2dp"
                android:text="@string/cash_points"
                android:textColor="@color/grey"
                android:textSize="@dimen/_11sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/qrLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:clickable="true"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/qrIcon"
                android:layout_width="50dp"
                android:layout_height="40dp"
                android:src="@drawable/qr_button" />

            <TextView
                android:id="@+id/qrText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_2dp"
                android:textColor="@color/grey"
                android:textSize="@dimen/_11sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/promotionLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:clickable="true"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/promotionIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_promotion_outlined" />

            <TextView
                android:id="@+id/promotionText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_2dp"
                android:text="@string/promotion"
                android:textColor="@color/grey"
                android:textSize="@dimen/_11sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/profileLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:clickable="true"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/profileIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_profile_outlined" />

            <TextView
                android:id="@+id/profileText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_2dp"
                android:text="@string/my_account"
                android:textColor="@color/grey"
                android:textSize="@dimen/_11sp" />
        </LinearLayout>

        <!-- Add more ImageViews for additional icons -->

    </LinearLayout>

    <FrameLayout
        android:id="@+id/fragment_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bottomNavigationBar" />

    <View
        android:id="@+id/indicatorBar"
        android:layout_width="57dp"
        android:layout_height="3dp"
        android:background="@color/green1"
        android:paddingStart="@dimen/_8dp"
        android:paddingEnd="@dimen/_8dp"
        app:layout_constraintBottom_toTopOf="@id/bottomNavigationBar"
        app:layout_constraintEnd_toStartOf="@id/guideline"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.2" />

</androidx.constraintlayout.widget.ConstraintLayout>